[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/ui_theme.tres" type="Theme" id=1]
[ext_resource path="res://assets/header_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/Save.svg" type="Texture" id=3]
[ext_resource path="res://assets/Load.svg" type="Texture" id=4]
[ext_resource path="res://exporters/Godot3Exporter.gd" type="Script" id=5]
[ext_resource path="res://exporters/CollisionGenerator.tscn" type="PackedScene" id=6]

[node name="GodotExportDialog" type="PopupDialog"]
visible = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -266.0
margin_bottom = -168.0
theme = ExtResource( 1 )
popup_exclusive = true
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_right = -20.0
margin_bottom = -20.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" type="Label" parent="VBox"]
margin_right = 1060.0
margin_bottom = 48.0
rect_min_size = Vector2( 0, 48 )
theme = ExtResource( 1 )
custom_colors/font_color = Color( 0.615686, 0.67451, 0.815686, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Godor resource exporter"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxTileset" type="HBoxContainer" parent="VBox"]
margin_top = 48.0
margin_right = 1060.0
margin_bottom = 88.0
custom_constants/separation = 8

[node name="Control" type="Control" parent="VBox/HBoxTileset"]
margin_right = 7.0
margin_bottom = 40.0
rect_min_size = Vector2( 7, 0 )

[node name="Label2" type="Label" parent="VBox/HBoxTileset"]
margin_left = 15.0
margin_right = 112.0
margin_bottom = 40.0
rect_min_size = Vector2( 97, 0 )
size_flags_vertical = 3
text = "Save tileset as"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResourceNameEdit" type="LineEdit" parent="VBox/HBoxTileset"]
margin_left = 120.0
margin_right = 711.0
margin_bottom = 40.0
size_flags_horizontal = 3
align = 3
editable = false
placeholder_text = ".tres"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectResourceButton" type="Button" parent="VBox/HBoxTileset"]
margin_left = 719.0
margin_right = 835.0
margin_bottom = 40.0
rect_min_size = Vector2( 116, 32 )
text = "Select file"
icon = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control2" type="Control" parent="VBox/HBoxTileset"]
margin_left = 843.0
margin_right = 843.0
margin_bottom = 40.0

[node name="CheckButton" type="CheckButton" parent="VBox/HBoxTileset"]
margin_left = 851.0
margin_right = 1060.0
margin_bottom = 40.0
hint_tooltip = "Override the new 1-tile tileset over the existing one or add a tile to it"
text = "Override completely"

[node name="Spacer" type="Control" parent="VBox"]
margin_top = 88.0
margin_right = 1060.0
margin_bottom = 104.0
rect_min_size = Vector2( 0, 16 )

[node name="TilesLabel" type="Label" parent="VBox"]
margin_top = 104.0
margin_right = 1060.0
margin_bottom = 123.0
size_flags_vertical = 1
text = "Select tileset to edit tiles â†‘"
valign = 2

[node name="TilesPanelContainer" type="PanelContainer" parent="VBox"]
margin_top = 123.0
margin_right = 1060.0
margin_bottom = 525.0
rect_min_size = Vector2( 0, 48 )
size_flags_vertical = 3

[node name="VBox" type="VBoxContainer" parent="VBox/TilesPanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1053.0
margin_bottom = 395.0
custom_constants/separation = 8

[node name="Control" type="Control" parent="VBox/TilesPanelContainer/VBox"]
margin_right = 1046.0

[node name="HBoxNewTile" type="HBoxContainer" parent="VBox/TilesPanelContainer/VBox"]
margin_top = 8.0
margin_right = 1046.0
margin_bottom = 48.0
custom_constants/separation = 8

[node name="Spacer" type="Control" parent="VBox/TilesPanelContainer/VBox/HBoxNewTile"]
margin_bottom = 40.0

[node name="LineEditName" type="LineEdit" parent="VBox/TilesPanelContainer/VBox/HBoxNewTile"]
margin_left = 8.0
margin_right = 168.0
margin_bottom = 40.0
rect_min_size = Vector2( 160, 0 )
hint_tooltip = "Tile name"
placeholder_text = "Tile name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spacer3" type="Control" parent="VBox/TilesPanelContainer/VBox/HBoxNewTile"]
margin_left = 176.0
margin_right = 192.0
margin_bottom = 40.0
rect_min_size = Vector2( 16, 0 )

[node name="Label2" type="Label" parent="VBox/TilesPanelContainer/VBox/HBoxNewTile"]
margin_left = 200.0
margin_top = 10.0
margin_right = 235.0
margin_bottom = 29.0
text = "Type:"

[node name="OptionButton" type="OptionButton" parent="VBox/TilesPanelContainer/VBox/HBoxNewTile"]
margin_left = 243.0
margin_right = 363.0
margin_bottom = 40.0
rect_min_size = Vector2( 120, 32 )
text = "3x3 minimal"

[node name="Label" type="Label" parent="VBox/TilesPanelContainer/VBox/HBoxNewTile"]
margin_left = 371.0
margin_right = 503.0
margin_bottom = 40.0
rect_min_size = Vector2( 132, 40 )
size_flags_vertical = 3
text = "Save texture as:"
align = 2
valign = 1

[node name="LineEditTexture" type="LineEdit" parent="VBox/TilesPanelContainer/VBox/HBoxNewTile"]
margin_left = 511.0
margin_right = 748.0
margin_bottom = 40.0
hint_tooltip = "Texture file"
size_flags_horizontal = 3
align = 2
editable = false
placeholder_text = ".png"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectTextureButton" type="Button" parent="VBox/TilesPanelContainer/VBox/HBoxNewTile"]
margin_left = 756.0
margin_right = 856.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 32 )
text = "Change"

[node name="Spacer2" type="Control" parent="VBox/TilesPanelContainer/VBox/HBoxNewTile"]
margin_left = 864.0
margin_right = 864.0
margin_bottom = 40.0

[node name="CollsionsLabel" type="Label" parent="VBox/TilesPanelContainer/VBox/HBoxNewTile"]
margin_left = 872.0
margin_right = 962.0
margin_bottom = 40.0
rect_min_size = Vector2( 90, 40 )
text = "Collisions:"
align = 2
valign = 1

[node name="CollisionsCheckButton" type="CheckButton" parent="VBox/TilesPanelContainer/VBox/HBoxNewTile"]
margin_left = 970.0
margin_right = 1046.0
margin_bottom = 40.0

[node name="HSeparator" type="HSeparator" parent="VBox/TilesPanelContainer/VBox"]
margin_top = 56.0
margin_right = 1046.0
margin_bottom = 68.0

[node name="ScrollContainer" type="ScrollContainer" parent="VBox/TilesPanelContainer/VBox"]
margin_top = 76.0
margin_right = 1046.0
margin_bottom = 388.0
rect_min_size = Vector2( 0, 312 )
scroll_horizontal_enabled = false

[node name="VBoxExistiingTiles" type="VBoxContainer" parent="VBox/TilesPanelContainer/VBox/ScrollContainer"]
margin_right = 1046.0
size_flags_horizontal = 3
custom_constants/separation = 10

[node name="Control" type="Control" parent="VBox"]
margin_top = 525.0
margin_right = 1060.0
margin_bottom = 527.0
rect_min_size = Vector2( 0, 2 )

[node name="HSeparator" type="HSeparator" parent="VBox"]
margin_top = 527.0
margin_right = 1060.0
margin_bottom = 547.0
custom_constants/separation = 20

[node name="HBoxContainer" type="HBoxContainer" parent="VBox"]
margin_top = 547.0
margin_right = 1060.0
margin_bottom = 583.0
custom_constants/separation = 16
alignment = 2

[node name="ButtonCancel" type="Button" parent="VBox/HBoxContainer"]
margin_left = 844.0
margin_right = 944.0
margin_bottom = 36.0
rect_min_size = Vector2( 100, 36 )
text = "Cancel"

[node name="ButtonOk" type="Button" parent="VBox/HBoxContainer"]
margin_left = 960.0
margin_right = 1060.0
margin_bottom = 36.0
rect_min_size = Vector2( 100, 36 )
hint_tooltip = "Saves changes  both to selected tileset and texture files"
custom_colors/font_color = Color( 0.615686, 0.67451, 0.815686, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Save"
icon = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.117647, 0.235294, 0.313726, 0.352941 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileBlockColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 22.0
margin_top = 125.0
margin_right = -22.0
margin_bottom = -76.0
color = Color( 0.0901961, 0.0980392, 0.101961, 0.780392 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResourceFileDialog" type="FileDialog" parent="."]
margin_right = 315.0
margin_bottom = 130.0
rect_min_size = Vector2( 600, 440 )
popup_exclusive = true
access = 2
filters = PoolStringArray( "*.tres ; Godot resouces" )
current_dir = "/Users/user/Documents/TilePipe"
current_path = "/Users/user/Documents/TilePipe/"

[node name="TextureFileDialog" type="FileDialog" parent="."]
margin_right = 315.0
margin_bottom = 130.0
rect_min_size = Vector2( 600, 440 )
popup_exclusive = true
access = 2
filters = PoolStringArray( "*.png ; PNG Images" )
current_dir = "/Users/user/Documents/TilePipe"
current_path = "/Users/user/Documents/TilePipe/"

[node name="ErrorDialog" type="AcceptDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -41.5
margin_top = -34.0
margin_right = 98.5
margin_bottom = 34.0
popup_exclusive = true
window_title = "Errors occured"

[node name="SaveConfirmationDialog" type="ConfirmationDialog" parent="."]
margin_left = 800.0
margin_top = 468.0
margin_right = 1000.0
margin_bottom = 538.0

[node name="CollisionGenerator" parent="." instance=ExtResource( 6 )]

[connection signal="pressed" from="VBox/HBoxTileset/SelectResourceButton" to="." method="_on_SelectResourceButton_pressed"]
[connection signal="toggled" from="VBox/HBoxTileset/CheckButton" to="." method="_on_CheckButton_toggled"]
[connection signal="text_changed" from="VBox/TilesPanelContainer/VBox/HBoxNewTile/LineEditName" to="." method="_on_LineEditName_text_changed"]
[connection signal="item_selected" from="VBox/TilesPanelContainer/VBox/HBoxNewTile/OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="pressed" from="VBox/TilesPanelContainer/VBox/HBoxNewTile/SelectTextureButton" to="." method="_on_SelectTextureButton_pressed"]
[connection signal="toggled" from="VBox/TilesPanelContainer/VBox/HBoxNewTile/CollisionsCheckButton" to="." method="_on_CollisionsCheckButton_toggled"]
[connection signal="pressed" from="VBox/HBoxContainer/ButtonCancel" to="." method="_on_ButtonCancel_pressed"]
[connection signal="pressed" from="VBox/HBoxContainer/ButtonOk" to="." method="_on_ButtonOk_pressed"]
[connection signal="file_selected" from="ResourceFileDialog" to="." method="_on_ResourceFileDialog_file_selected"]
[connection signal="file_selected" from="TextureFileDialog" to="." method="_on_TextureFileDialog_file_selected"]
[connection signal="confirmed" from="ErrorDialog" to="." method="_on_ErrorDialog_confirmed"]
